nohup.out
 * Serving Flask app "app" (lazy loading)
 * Environment: production
   WARNING: Do not use the development server in a production environment.
   Use a production WSGI server instead.
 * Debug mode: on
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 201-174-926
 * Running on http://0.0.0.0:5000/ (Press CTRL+C to quit)
 * Detected change in 'C:\\Users\\home\\Desktop\\IEC_Training\\webdev_class\\app.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 201-174-926
 * Running on http://0.0.0.0:5000/ (Press CTRL+C to quit)
127.0.0.1 - - [01/Sep/2018 06:32:28] "GET / HTTP/1.1" 200 -
127.0.0.1 - - [01/Sep/2018 06:32:40] "GET /submit?location=dallas&term=restaurant HTTP/1.1" 200 -
127.0.0.1 - - [01/Sep/2018 06:32:41] "GET /submit?location=dallas&term=restaurant HTTP/1.1" 200 -
 * Detected change in 'C:\\Users\\home\\Desktop\\IEC_Training\\webdev_class\\my_yelp.py', reloading
 * Restarting with stat
Traceback (most recent call last):
  File "app.py", line 2, in <module>
    import my_yelp
  File "C:\Users\home\Desktop\IEC_Training\webdev_class\my_yelp.py", line 19
    "limit": *,
             ^
SyntaxError: invalid syntax
